plugins {
    id 'java'
    id 'idea'
    id 'java-gradle-plugin'
    // id 'com.diffplug.spotless' version '6.23.3'
    id 'maven-publish'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

group = 'com.cleanroommc'
version = '0.4.5'

repositories {
    maven {
        name = 'MinecraftForge'
        url = 'https://maven.minecraftforge.net/'
    }
    mavenCentral()
    gradlePluginPortal()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'commons-codec:commons-codec:1.16.0'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'io.github.java-diff-utils:java-diff-utils:4.15'
    implementation 'org.ow2.asm:asm:9.6'
    implementation 'org.ow2.asm:asm-commons:9.6'
    implementation 'org.ow2.asm:asm-tree:9.6'
    implementation 'org.ow2.asm:asm-util:9.6'
    implementation 'de.undercouch.download:de.undercouch.download.gradle.plugin:5.6.0'
    implementation 'de.siegmar:fastcsv:3.0.0'
    // CleanroomGradleSettings
    implementation 'org.gradle.toolchains:foojay-resolver:1.0.0'

    // Forge
    implementation 'net.minecraftforge:srgutils:0.5.3'
    implementation 'net.minecraftforge:renamer-gradle:1.1.5'

    testImplementation gradleTestKit()
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    systemProperty 'plugin.project.dir', rootDir.absolutePath
}

gradlePlugin {
    plugins {
        cleanroomGradle {
            id = "${group}.cleanroomgradle"
            implementationClass = "${group}.gradle.CleanroomGradle"
        }
        cleanroomGradleSettings {
            id = "${group}.cleanroomgradle.settings"
            implementationClass = "${group}.gradle.CleanroomGradleSettings"
        }
    }
    automatedPublishing = true
}

jar {
    manifest {
        attributes "Implementation-Version": version
    }
}

publishing {
    publications {
        pluginMaven(MavenPublication) {
            artifactId = 'cleanroomgradle'
        }
    }
    repositories {
        maven {
            name = 'CleanroomMaven'
            url = 'https://repo.cleanroommc.com/releases'
            credentials(PasswordCredentials)
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}

//spotless {
//    encoding 'UTF-8'
//    format ('misc') {
//        target '*.gradle', '.gitattributes', '.gitignore', '*.properties'
//        indentWithSpaces()
//        trimTrailingWhitespace()
//        endWithNewline()
//    }
//    java {
//        importOrder 'java', 'javax', 'org', 'com', '', '\\#'
//        removeUnusedImports()
//        indentWithSpaces()
//        trimTrailingWhitespace()
//        endWithNewline()
//        formatAnnotations()
//        eclipse('4.26').configFile('../cleanroom_format.xml')
//        custom 'noWildcardImports', com.diffplug.spotless.FormatterFunc.needsFile((text, file) -> {
//            text.eachLine {
//                if (it.trim() ==~ /^import\s(static\s)?\S+\*;/) {
//                    throw new Error("${file.getName()}\n\t $it\n\t\tNo wildcard imports allowed, import individually.")
//                }
//            }
//        })
//    }
//    json {
//        target 'src/**/*.json'
//        simple().indentWithSpaces(4)
//    }
//}
